<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/paddingloginLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:paddingTop="130dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="bold"
        />

        <TextView
                android:id="@+id/loginHelpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_get_started"
                android:layout_marginBottom="16dp"
        />

        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
        />

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:layout_marginBottom="22dp"
        />

        <CheckBox
                android:id="@+id/rememberCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remeber_me"
                android:layout_marginBottom="32dp"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="180dp">

            <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/login"/>

            <TextView
                    android:id="@+id/forgotpwTextView"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/forgot_password"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:linksClickable="true"
            />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:background="#f0f0f0"
    android:orientation="horizontal">
        <TextView
                android:id="@+id/newUserTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="1dp"
                android:gravity="center_vertical"
                android:text="@string/newhere"/>
        <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:text="@string/register"/>
    </LinearLayout>


</LinearLayout>